# droneAnalyzer

./: .gitignore  README.md  alert_system.py  app.py  data_manager.py  detector.py  index.html  main.py  objects.inv  project_goals.md  py-modindex.html  pyproject.toml  readme.html  search.html  simulator.py
.github/workflows/: docs.yml
_modules/src/models/: object_detector.html
_modules/src/processors/: frame_processor.html  video_processor.html
_sources/: development.rst.txt
docs/: architecture.md  feature_spec.md
docs/source/: conf.py  index.rst  usage.rst
src/alerts/: alert_generator.py
src/api/: query_interface.py
src/data/: telemetry_simulator.py  video_simulator.py
src/models/: captioning_model.py  event_analyzer.py  object_detector.py  query_agent.py  video_summarizer.py
src/processors/: frame_processor.py  telemetry_processor.py  video_processor.py
src/rules/: predefined_rules.py  rule_engine.py
src/storage/: event_logger.py  frame_indexer.py
