[project]
name = "drone-security-analyst"
version = "0.1.0"
description = "Real-time drone security analysis system"
requires-python = ">=3.8"
dependencies = [
    "ultralytics>=8.0.0",
    "torch>=2.0.0",
    "numpy>=1.21.0",
    "opencv-python>=4.8.0",
    "streamlit>=1.24.0",
    "pandas>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
