[project]
name = "drone-security-analyst"
version = "0.1.0"
description = "Real-time drone security analysis system"
requires-python = ">=3.8"
dependencies = [
    "ultralytics>=8.0.0",
    "torch>=2.0.0",
    "numpy>=1.21.0",
    "opencv-python>=4.8.0",
    "streamlit>=1.24.0",
    "pandas>=2.0.0",
    "transformers>=4.30.0",
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# packages to include
[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.sphinx]
source_dir = "docs/source"
build_dir = "docs/build"
